お願いします

--- a/blog.css
+++ b/blog.css
@@ -87,11 +87,11 @@ header {
 /* 整个登录画面表单构造 */
 .register-section-details_flex {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 0 2rem;
     align-items: center;
     margin: 1.2rem 0;
-    width: 320px;
+    /* width: 320px; */
 }
 .register-section-details {
  
@@ -112,7 +112,7 @@ header {
 /*-------------------------------*/
 /* 商品名的框大小 */
 
- */
+ 
 input[type="text"] {
     padding: 13px 25px;
     border: 10px solid #6e6d6d;
@@ -121,12 +121,21 @@ input[type="text"] {
     margin-bottom: 15px;
     box-shadow: 0 0 0 3px #ccc inset;
     /* width: 200px; */
-    width: 100%;
+    width: 210px;
     outline: none;
     border: none;
     border-bottom: 2px solid #70b4e3;
     color:#366ae6 ;
    
+}
+/* 入力欄のタイトル調整 */
+.contents-width{
+    width: 70px;
+    text-align: left;
+}
+/* 入力欄の大きさ調整 */
+.input-width {
+    width: 260px;
 }
 
 /* 商品说明大小设计 */
@@ -148,7 +157,9 @@ textarea{
     outline: none;
     border: none;
     border-bottom: 2px solid #70b4e3;
+    
  
+    
 }
 
 /* 下拉菜单的大小设计 */
@@ -244,12 +255,24 @@ select{
     font-family: "Permanent Marker", cursive;
     font-weight: 400;
     font-style: normal;
+   }
+   #delete{
+    display: block;
+    width: 100%;
+    color: #fff;
+    font-size: 14px;
+    margin: 0;
+    padding: 14px 40px;
+    border: 0;
+     background-image: linear-gradient(120deg,#78daec 0%,#c5a8de 100%) ;
+    border-radius: 25px;
+    line-height: 1;
+    cursor: pointer;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
+   }
    
-    
-
-
-
-}
 /* 返回按钮 */
 #back-btn{
     /* display: block;
@@ -282,16 +305,14 @@ select{
 }
 /* 名字的字体颜色和大小 */
 #w-line-1{
-    color: #6e6d6d;
-    font-size: 20px;
-    margin-top: 10px;
-    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #594A4E;
     font-family: "Permanent Marker", cursive;
     font-weight: 400;
     font-style: normal;
-  
-}
 
+}
   
 /* 新规记事 */
 #w-line-2{
