--- a/Blog/src/main/resources/templates/login.html
+++ b/Blog/src/main/resources/templates/login.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet"th:href="@{/css/login.css}">
     <title>Login</title>
 
 </head>
 
-<body>
+<body th:background="@{/img/6.jpg}" alt="">
     <main>
         <section class="login">
             <form class="box" action="#" method="post">
@@ -19,9 +19,9 @@
 
                 <input type="password" placeholder="Password" id="login-pass" name="password" required>
                 <br>
-                <div >
-                    <button id="login">Register</button>
-                </div>
+				<div >
+				        <button id="login">Login</button>
+				</div>
                 <div class="content">
                     登録は<a href="register.html">こちら</a>
                 </div>
