--- a/blog.css
+++ b/blog.css
@@ -93,6 +93,14 @@ header {
     margin: 1.2rem 0;
     /* width: 320px; */
 }
+.register-section-details_flex1 {
+    display: flex;
+    /* justify-content: center; */
+    gap: 0 2rem;
+    align-items: center;
+    margin: 1.2rem 0;
+    /* width: 320px; */
+}
 .register-section-details {
  
     
@@ -335,6 +343,7 @@ h3{
     font-weight: 400;
     font-style: normal;
 }
+
 
 
  
