--- a/Blog/src/main/resources/static/css/blog_list.css
+++ b/Blog/src/main/resources/static/css/blog_list.css
@@ -39,9 +39,7 @@ header {
     padding-top: 0.5rem;
 }
 
-/*----------------------------
-* メニュー本体
-*----------------------------*/
+
 
 
 /*----------------------------------------------------------------
@@ -141,18 +139,7 @@ a.btn--radius {
     font-size: 1.2rem;
 }
 
-/*---------------------------------------------------------------------------
-商品詳細
-----------------------------------------------------------------------------*/
 
-
-/*----------------商品一覧---------------------*/
-
-/*-------------------------------------------------------
-                        登録画面
----------------------------------------------------------*/
-
-/*-------------------------------*/
 
 
 /*--------------フッター------------*/
@@ -166,9 +153,7 @@ footer div {
     color: #fff;
 
 }
-/*-------------------------------------------------------
-                        ジャンル一覧
----------------------------------------------------------*/
+
 
 
 
@@ -206,6 +191,15 @@ footer div {
         font-style: normal;
     }
  
+	  .pc-list h2 {
+	       font-size: 1.2rem;
+	       font-weight: 600;
+	       color: #594A4E;
+	       font-family: "Permanent Marker", cursive;
+	       font-weight: 400;
+	       font-style: normal;
+	   }
+
     .pc-list a:hover {
         color: #EC6015;
     }
@@ -222,7 +216,7 @@ footer div {
         padding: 1.5rem 0;
     }
 
-    /*--------検索部分----------------*/
+
 
  
 
@@ -236,9 +230,7 @@ footer div {
         box-sizing: border-box;
     }
 
-    /*---------------------------------------------------------------------------
-商品詳細
-----------------------------------------------------------------------------*/
+
 
 
 /*----------------商品一覧---------------------*/
