--- a/Blog/src/main/resources/templates/register.html
+++ b/Blog/src/main/resources/templates/register.html
@@ -31,7 +31,7 @@
 				     <button id="register">Register</button>
 			    </div>
                 <div class="content">
-                    ログインは<a href="login.html">こちら</a>
+                    ログインは<a th:href="@{/login}">こちら</a>
                 </div>
             </form>
         </section>
