--- a/Blog/src/main/resources/templates/blog_list.html
+++ b/Blog/src/main/resources/templates/blog_list.html
@@ -43,7 +43,7 @@
 					</ul>
 					
 		               <ul class="pc-list">
-
+						   <li class="pc-list__item"><a th:href="@{/blog/profile}">Profile</a></li>
 		                   <li class="pc-list__item"><a th:href="@{/blog/register}">Blog Register</a></li>
 		                   <li class="pc-list__item"><a th:href="@{/account/logout}">Log out</a></li>
 		               </ul>
