--- a/Blog/src/main/resources/templates/blog_register.html
+++ b/Blog/src/main/resources/templates/blog_register.html
@@ -42,7 +42,8 @@
 							
             <ul class="pc-list">
 					<!--<li class="pc-list__item" th:text="${accountName}"></li>-->
-                    <li class="pc-list__item"><a th:href="@{/blog/list}">Blog List</a></li>
+					 <li class="pc-list__item"><a th:href="@{/blog/profile}">Profile</a></li>
+					 <li class="pc-list__item"><a th:href="@{/blog/list}">Blog List</a></li>
                     <li class="pc-list__item"><a th:href="@{/account/logout}">Log out</a></li>
                 </ul>
             </div>
