--- a/Blog/src/main/resources/templates/blog_edit.html
+++ b/Blog/src/main/resources/templates/blog_edit.html
@@ -40,6 +40,7 @@
 					<h2 class="pc-list__item" th:text="${accountName}"></h2>
 				</ul>
 				<ul class="pc-list">
+					<li class="pc-list__item"><a th:href="@{/blog/profile}">Profile</a></li>
 					<li class="pc-list__item"><a th:href="@{/blog/register}">Blog Register</a></li>
 					<li class="pc-list__item"><a th:href="@{/account/logout}">Log out</a></li>
 				</ul>
@@ -85,7 +86,7 @@
 						</div>
 					</form>
 					<form th:action="@{/blog/delete}" method="post">
-						<div class="register-section-details_flex">
+						<div class="register-section-details_button">
 							<input type="hidden" name="blogId" th:value="${blog.blogId}">
 							<button class="register" id="delete">Delete</button>
 						</div>
