--- a/Blog/src/main/resources/static/css/profile.css
+++ b/Blog/src/main/resources/static/css/profile.css
@@ -127,4 +127,32 @@ h2{
     line-height: 50px;
     margin-bottom: 20px;
 }
+#back-btn{
+    /* display: block;
+    width: 100%;
+    color: #fff;
+    font-size: 14px;
+    margin: 0;
+    padding: 14px 40px;
+    border: 0;
+    background-color: #f5506c;
+    border-radius: 25px;
+    line-height: 1;
+    cursor: pointer; */
+    display: block;
+    width: 100%;
+    color: #fff;
+    font-size: 14px;
+    margin: 0;
+    padding: 14px 40px;
+    border: 0;
+     background-image: linear-gradient(120deg,#78daec 0%,#c5a8de 100%) ;
+    border-radius: 25px;
+    line-height: 1;
+    cursor: pointer;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
 
+
+}
