--- a/Blog/src/main/resources/templates/blog_register.html
+++ b/Blog/src/main/resources/templates/blog_register.html
@@ -2,101 +2,88 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品一覧</title>
-    <link rel="preconnect"th:href="@{https://fonts.googleapis.com}">
-    <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
-    <link th:href="@{https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Permanent+Marker&display=swap}"
-        rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/reset.css}">
-    <link rel="stylesheet" th:href="@{/css/blog.css}">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>商品一覧</title>
+	<link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
+	<link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
+	<link th:href="@{https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Permanent+Marker&display=swap}"
+		rel="stylesheet">
+	<link rel="stylesheet" th:href="@{/css/reset.css}">
+	<link rel="stylesheet" th:href="@{/css/blog.css}">
 </head>
 
 <body>
-    <header>
-        <!--スマートフォン-->
-        <nav class="menu">
-            <div class="menu-contents">
-                <div class="menu-inner">
-                    <ul>
-
-                        <li class="menu__item"><a href="">Logout</a></li>
-                    </ul>
-                </div>
-                <div class="menu-toggle_btn">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </nav>
-        <!--pc-->
+	<header>
+		<!--スマートフォン-->
+		<nav class="menu">
+			<div class="menu-contents">
+				<div class="menu-inner">
+					<ul>
+						<li class="menu__item"><a href="">Logout</a></li>
+					</ul>
+				</div>
+				<div class="menu-toggle_btn">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
+		</nav>
+		<!--pc-->
 		<nav class="pc">
-		  <div class="pc-inner">
-			<ul class="pc-list">
-				<h2 class="pc-list__item">Welcome!</h2>
-			    <h2 class="pc-list__item" th:text="${accountName}"></h2>
-			</ul>
-							
-            <ul class="pc-list">
+			<div class="pc-inner">
+				<ul class="pc-list">
+					<h2 class="pc-list__item">Welcome!</h2>
+					<h2 class="pc-list__item" th:text="${accountName}"></h2>
+				</ul>
+				<ul class="pc-list">
 					<!--<li class="pc-list__item" th:text="${accountName}"></li>-->
-					 <li class="pc-list__item"><a th:href="@{/blog/profile}">Profile</a></li>
-					 <li class="pc-list__item"><a th:href="@{/blog/list}">Blog List</a></li>
-                    <li class="pc-list__item"><a th:href="@{/account/logout}">Log out</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <div class="main-inner">
-            <section class="register-section">
-
-                <form class="form-contents" th:action="@{/blog/register/process}" method="post" enctype="multipart/form-data">
-
-                    <div class="register-section-details">
-                        <h2 id="title">Add new article</h2>
-						
-						
-                        <div class="register-section-details_flex">
-							
-                         <h3 class="contents-width">title</h3>
-                            <input class="input-width" type="text" name="blogTitle" id="userName">
-                        </div>
-                        <div class="register-section-details_flex">
-                            <h3 class="contents-width">category</h3>
-
-                            <select class="input-width" name="categoryName">
-                                <option value=""></option>
-                                <option value="家庭">家庭</option>
+					<li class="pc-list__item"><a th:href="@{/blog/select}">Select</a></li>
+					<li class="pc-list__item"><a th:href="@{/blog/profile}">Profile</a></li>
+					<li class="pc-list__item"><a th:href="@{/blog/list}">Blog List</a></li>
+					<li class="pc-list__item"><a th:href="@{/account/logout}">Log out</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	<main>
+		<div class="main-inner">
+			<section class="register-section">
+				<form class="form-contents" th:action="@{/blog/register/process}" method="post"
+					enctype="multipart/form-data">
+					<div class="register-section-details">
+						<h2 id="title">Add new article</h2>
+						<div class="register-section-details_flex">
+							<h3 class="contents-width">title</h3>
+							<input class="input-width" type="text" name="blogTitle" id="userName">
+						</div>
+						<div class="register-section-details_flex">
+							<h3 class="contents-width">category</h3>
+							<select class="input-width" name="categoryName">
+								<option value=""></option>
+								<option value="家庭">家庭</option>
 								<option value="勉強">勉強</option>
-								<option value="仕事" >仕事</option>
-                               
-                            </select>
-                        </div>
-                        
-                        <div class="register-section-details_flex">
-                            <h3 class="contents-width">image</h3>
-                            <input type="file" id="fileselect" name="blogImage">
-                        </div>
-
-                        <div class="register-section-details_flex">
-                            <h3 class="contents-width">introduce</h3>
-                            <textarea name="article" class="t" ></textarea>
-                        </div>
-
-                        <div class="register-section-details_flex">
-                            <button id="register">Register</button>
-                            <button id="back-btn" onclick="history.back();" type="button">Back</button>
-                        </div>
-                    </div>
-
-                </form>
-            </section>
-        </div>
-    </main>
-
+								<option value="仕事">仕事</option>
+							</select>
+						</div>
+						<div class="register-section-details_flex">
+							<h3 class="contents-width">image</h3>
+							<input type="file" id="fileselect" name="blogImage">
+						</div>
+						<div class="register-section-details_flex">
+							<h3 class="contents-width">introduce</h3>
+							<textarea name="article" class="t"></textarea>
+						</div>
+						<div class="register-section-details_flex">
+							<button id="register">Register</button>
+							<button id="back-btn" onclick="history.back();" type="button">Back</button>
+						</div>
+					</div>
+				</form>
+			</section>
+		</div>
+	</main>
 </body>
-
 </html>
